# qt_rfid_monitor

./: .gitignore  CMakeLists.txt  README.md  build_appimage.sh  resources.qrc
sql/: schema.sql  seed.sql
src/: main.cpp
src/app/: AppWindow.cpp  AppWindow.h
src/data/: DataProvider.h  InMemoryDataProvider.cpp  InMemoryDataProvider.h  MySqlDataProvider.cpp  MySqlDataProvider.h
src/db/: DbConfig.h
src/pages/: DashboardPage.cpp  DashboardPage.h  SearchPage.cpp  SearchPage.h
src/pages/dashboard/: DashboardPage.cpp  DashboardPage.h  DashboardPage.qss
src/pages/search/: SearchPage.cpp  SearchPage.h  SearchPage.qss
styles/: app.qss
